# TCPServerCLient

./: CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt  main.cpp
Networking/: CMakeLists.txt
Networking/include/: connection.h
Networking/include/networking/: subserver.h
Networking/src/: connection.cpp  subserver.cpp
Server/: CMakeLists.txt  main.cpp
